--- a/company/src/Component/Reg/index.css
+++ b/company/src/Component/Reg/index.css
@@ -1,14 +1,17 @@
 .reg{
   width: 100%;
-  box-sizing: border-box;
-  background: rgba(52,155,154,0.6)
 }
-.reg h2 {
+.reg h2{
   text-align: center;
-  width: 100%;
-  padding: 20px;
-  font-size: 34px;
-} 
-.reg .form {
-  
+}
+.wrapmsg{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.wrapmsg .item{
+  display: flex
+}
+.wrapmsg .item .subitem{
+  display: flex;
 }
